--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
-body {
+* {
+  padding: 0;
+  box-sizing: border-box;
+  font-weight: 600;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +13,162 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+body{
+  width: 100%;
+  min-width: 100vh;
+  background: #fccb90;
+}
+.App{
+  background-image: linear-gradient(100deg, #fccb90 2%, #d57eeb 80%);
+  width: 400px;
+  min-height: 500px;
+  position: absolute;
+  top: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 20px;
+  box-shadow: 10px 10px 13px #0002,
+              -10px -10px 13px #fff7;
+}
+
+h2{
+  margin-top: 10px;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 2.5em;
+  color: #fccb90;
+  margin-bottom: 20px;
+  text-shadow: -3px -3px 3px #fff7,
+                3px 3px 3px #0003;
+
+}
+
+form{
+  width: 100%;
+  height: 40px;
+  margin: 20px;
+  
+}
+
+form input,
+form button{
+  width: 250px;
+  height: 100%;
+  border: none;
+  outline: none;
+  background: transparent;
+  border-radius: 5px;
+  padding: 0 5px;
+  box-shadow: inset -5px -5px 5px #fff5,
+              inset 5px 5px 5px #0002;
+
+}
+
+form button{
+  width: 80px;
+  margin-left: 15px;
+  letter-spacing: 2px;
+  background-color: #555;
+  color: white;
+  cursor: pointer;
+  box-shadow: inset -5px -5px 5px #fff5,
+              inset 5px 5px 5px #0002;
+}
+
+ul li{
+  list-style: none;
+  border: 1px solid #ccc;
+  margin: 15px 0;
+  padding: 10px;
+  text-transform: capitalize;
+  box-shadow: inset -5px -5px 5px #fff5,
+              inset 5px 5px 5px #0002;
+  animation: opacity 0.2s linear;
+}
+
+@keyframes opacity{
+  from{
+    opacity: 0;
+    transform: scale(0.7);
+  }
+}
+
+ul li .active{
+  opacity: 0.5;
+  text-decoration: line-through;
+}
+
+ul li input,
+.row input{
+  margin-right: 5px;
+  transform: translateY(1px);
+
+}
+ul li button,
+.row button{
+  border: none;
+  outline: none;
+  color: white;
+  background: orange;
+  padding: 5px 15px;
+  cursor: pointer;
+}
+
+ul li button:disabled{
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+ul li .row{
+  float: right;
+}
+ul li .row i{
+  color: #fccb90;
+  margin-left: 15px;
+  cursor: pointer;
+  font-size: 22px;
+  
+}
+ul li .row i:hover{
+  color: crimson;
+}
+.row{
+  display: flex;
+  justify-content:space-between ;
+  align-items: center;
+  
+}
+.row #delete{
+  background: crimson;
+  width: 80px;
+  margin-left: 15px;
+  letter-spacing: 2px;
+  color: white;
+  cursor: pointer;
+  box-shadow: inset -5px -5px 5px #fff5,
+              inset 5px 5px 5px #0002;
+}
+.navbar{
+  width: 250px;
+  height: 100%;
+  border-radius: 5px;
+  padding: 0 5px;
+}
+
+
+label{
+  cursor: pointer;
+}
+
+@media (max-width:400px){
+  .App{
+    padding: 10px;
+  }
+}
+
+h3{
+  text-align: center;
+  color: crimson;
 }
